# book-tracker

book-tracker/: pyproject.toml
book-tracker/src/book_tracker/: book_tracker.py
book-tracker/src/book_tracker/app/: routes.py  variables.py
book-tracker/src/book_tracker/app/templates/: index.html
